--- a/thesis/src/index.css
+++ b/thesis/src/index.css
@@ -1,23 +1,29 @@
 @import 'tailwindcss';
 
-.clip-hexagon {
-    
+@theme {
+  --animate-loadstart: loadstart 0.5s ease-in-out;
+  --animate-fromleft: fromleft 1s ease-in-out;
+  
+  @keyframes loadstart {
+    0%{
+        transform: translateY(40%);
+        opacity: 0;
+    }
+    50%{
+        transform: translateY(0.5%);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0%);
+        opacity: 1;
+    }
+  }
+}
+
+.hexagon {
   clip-path: polygon(
-    50% 0%, 
-    100% 25%, 
-    100% 75%, 
-    50% 100%, 
-    0% 75%, 
-    0% 25%
+    25% 6.7%, 75% 6.7%,
+    100% 50%, 75% 93.3%,
+    25% 93.3%, 0% 50%
   );
 }
-
-@keyframes spin-slow {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.animate-spin-slow {
-  animation: spin-slow 2s linear infinite;
-}
-
